# printf-log-formatter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml  tes2.py  test.py  test_cases.py
.github/: set_version.py
.github/workflows/: release.yaml  test.yaml
src/: ast.rs  cli.rs  enums.rs  fix_file.rs  format.rs  fstring.rs  gen_visitor.rs  main.rs  options.rs  parse_format.rs  parse_fstring.rs  utils.rs  visitor.rs
