[package]
name = "printf-log-formatter"
version = "0.1.0"
edition = "2021"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
description = "Printf log formatter"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.8", default-features = false, features=["std", "derive"] }
futures = "0.3.28"
rustpython-parser = { features = [
  "lalrpop",
  "serde",
], git = "https://github.com/RustPython/RustPython.git", rev = "c15f670f2c30cfae6b41a1874893590148c74bc4" }
# TODO: Trim features
tokio = { version = "1.27.0", features = ["fs", "macros", "full"] }
