[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "printf-log-formatter"
description = "Convert logger f-strings and str.format syntax to printf-style strings"
readme = "README.md"
authors = [{ name = "Sondre Lillebø Gundersen", email = "sondrelg@live.no" }]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = []
keywords = ["linter", "formatter", "logging", "sentry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/sondrelg/printf-log-formatter"
Changelog = "https://github.com/sondrelg/printf-log-formatter/releases"
